Add receiver html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Example minimum receiver</title>
+    <title>Cast Receiver</title>
     <script src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
     <style>
         #text{
